# SimpleDJ

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: ChangePinPopup.h  CurrentSongWidget.h  MainWindow.h  QueueLayout.h  Song.h  SongLoader.h  SongQueueItemWidget.h  SongQueueWidget.h  SongSearchItemWidget.h  SongSearchWidget.h  UnlockPopup.h
libraries/: CMakeLists.txt
src/: CMakeLists.txt  ChangePinPopup.cpp  CurrentSongWidget.cpp  MainWindow.cpp  QueueLayout.cpp  Song.cpp  SongLoader.cpp  SongQueueItemWidget.cpp  SongQueueWidget.cpp  SongSearchItemWidget.cpp  SongSearchWidget.cpp  UnlockPopup.cpp  main.cpp
