#wolfssl Licensed under GPLv2
set(BUILD_SHARED_LIBS OFF)
set(WOLFSSL_BUILD_OUT_OF_TREE ON)
set(WOLFSSL_OPENSSLEXTRA ON)
set(WOLFSSL_DES3 ON)
set(WOLFSSL_SP_MATH_ALL OFF)
set(WOLFSSL_FAST_MATH ON)
add_compile_definitions(WOLFSSL_DES_ECB)
add_subdirectory(wolfssl)
unset(BUILD_SHARED_LIBS)
unset(WOLFSSL_BUILD_OUT_OF_TREE)
unset(WOLFSSL_OPENSSLEXTRA)
unset(WOLFSSL_DES3)
unset(WOLFSSL_SP_MATH_ALL)
unset(WOLFSSL_FAST_MATH)

#libcURL licensed under MIT-like, CURL license
set(BUILD_CURL_EXE OFF)
set(BUILD_SHARED_LIBS OFF)
set(HTTP_ONLY ON)
set(CURL_USE_OPENSSL OFF)
set(CURL_USE_WOLFSSL ON)
set(WolfSSL_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/wolfssl;${CMAKE_CURRENT_SOURCE_DIR}/wolfssl)
set(WolfSSL_LIBRARY ${CMAKE_CURRENT_BINARY_DIR}/wolfssl/libwolfssl.a)
include(CheckTypeSize)
check_type_size("long" SIZEOF_LONG)
check_type_size("long long" SIZEOF_LONG_LONG)
add_compile_definitions(SIZEOF_LONG=${SIZEOF_LONG} SIZEOF_LONG_LONG=${SIZEOF_LONG_LONG})
add_subdirectory(curl)
unset(BUILD_CURL_EXE)
unset(BUILD_SHARED_LIBS)
unset(HTTP_ONLY)
unset(CURL_USE_OPENSSL)
unset(CURL_USE_WOLFSSL)
unset(WolfSSL_INCLUDE_DIR)
unset(WolfSSL_LIBRARY)
remove_definitions(SIZEOF_LONG SIZEOF_LONG_LONG)